[gd_scene load_steps=51 format=3 uid="uid://ccg021l8va1nb"]

[ext_resource type="Script" uid="uid://bvfhmbyfrdwry" path="res://scripts/player/player.gd" id="1_yj2nq"]
[ext_resource type="Texture2D" uid="uid://dpws1jqb86o3k" path="res://assets/characters/enemies/sword attack.png" id="2_igqbg"]
[ext_resource type="Texture2D" uid="uid://ukcnydiuw7bq" path="res://assets/characters/player/Player Hurt 48x48.png" id="3_3yyo8"]
[ext_resource type="Texture2D" uid="uid://n5kg423v8b7n" path="res://assets/characters/enemies/sword Idle.png" id="3_6igro"]
[ext_resource type="Texture2D" uid="uid://dh0rkbth5j2qj" path="res://assets/characters/player/player new jump 48x48.png" id="3_kai5h"]
[ext_resource type="Texture2D" uid="uid://du6ellrn8fokb" path="res://assets/characters/enemies/sowrd run.png" id="5_3yyo8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igqbg"]
atlas = ExtResource("2_igqbg")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6igro"]
atlas = ExtResource("2_igqbg")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yyo8"]
atlas = ExtResource("2_igqbg")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r20fg"]
atlas = ExtResource("2_igqbg")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovbtq"]
atlas = ExtResource("2_igqbg")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnwcq"]
atlas = ExtResource("2_igqbg")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj01l"]
atlas = ExtResource("3_3yyo8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqix7"]
atlas = ExtResource("3_3yyo8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4x4j"]
atlas = ExtResource("3_3yyo8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkdkw"]
atlas = ExtResource("3_3yyo8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqrax"]
atlas = ExtResource("3_6igro")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yibdy"]
atlas = ExtResource("3_6igro")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b3g8"]
atlas = ExtResource("3_6igro")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcjyw"]
atlas = ExtResource("3_6igro")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lccj0"]
atlas = ExtResource("3_6igro")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nesiw"]
atlas = ExtResource("3_6igro")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol31t"]
atlas = ExtResource("3_6igro")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxmvg"]
atlas = ExtResource("3_6igro")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_50dvo"]
atlas = ExtResource("3_6igro")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0svxj"]
atlas = ExtResource("3_6igro")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0bbo"]
atlas = ExtResource("3_kai5h")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j77er"]
atlas = ExtResource("3_kai5h")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p83wy"]
atlas = ExtResource("3_kai5h")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4jq6"]
atlas = ExtResource("3_kai5h")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj7se"]
atlas = ExtResource("3_kai5h")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyddv"]
atlas = ExtResource("3_kai5h")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuq7w"]
atlas = ExtResource("5_3yyo8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj11r"]
atlas = ExtResource("5_3yyo8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydh2c"]
atlas = ExtResource("5_3yyo8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7kas"]
atlas = ExtResource("5_3yyo8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv7vg"]
atlas = ExtResource("5_3yyo8")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrskp"]
atlas = ExtResource("5_3yyo8")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvd0"]
atlas = ExtResource("5_3yyo8")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnbxw"]
atlas = ExtResource("5_3yyo8")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqix7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igqbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6igro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yyo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r20fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovbtq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnwcq")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj01l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqix7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4x4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkdkw")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqrax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yibdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcjyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lccj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nesiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol31t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxmvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50dvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0svxj")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0bbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j77er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p83wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4jq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj7se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyddv")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj11r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydh2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7kas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv7vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrskp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uvd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnbxw")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enrq2"]
size = Vector2(13, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_so2s4"]
radius = 3.16228

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kai5h"]
size = Vector2(11.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dolh7"]
size = Vector2(16, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_kai5h"]
radius = 4.12311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fo2x"]
size = Vector2(10.5, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jft68"]
size = Vector2(20, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_5amry"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_dolh7"]
radius = 23.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_yj2nq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -16)
sprite_frames = SubResource("SpriteFrames_dqix7")
animation = &"attack"
autoplay = "idle"

[node name="idle" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -10)
shape = SubResource("RectangleShape2D_enrq2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="idle"]
position = Vector2(2, -14)
shape = SubResource("CircleShape2D_so2s4")

[node name="jump" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -8)
shape = SubResource("RectangleShape2D_kai5h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_dolh7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="jump"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_kai5h")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="jump"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_kai5h")

[node name="run" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, -13)
shape = SubResource("RectangleShape2D_1fo2x")

[node name="piernas" type="CollisionShape2D" parent="run"]
position = Vector2(-1, 8)
shape = SubResource("RectangleShape2D_jft68")

[node name="cabeza" type="CollisionShape2D" parent="run"]
position = Vector2(4, -13)
shape = SubResource("CircleShape2D_5amry")

[node name="player_hit_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hit_box"]
position = Vector2(-1, -14)
shape = SubResource("CircleShape2D_dolh7")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -425
limit_top = -197
limit_bottom = 312
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="player_is_hurt" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="player_hit_box" to="." method="_on_player_hit_box_body_entered"]
[connection signal="body_exited" from="player_hit_box" to="." method="_on_player_hit_box_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="player_is_hurt" to="." method="_on_player_is_hurt_timeout"]
